--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.CallActivity"
-            android:screenOrientation="portrait" />
+            android:configChanges="orientation|screenSize"
+            />
         <activity
             android:name=".ui.SplashActivity"
             android:screenOrientation="portrait"
