--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,15 @@
 apply plugin: 'com.android.application'
+apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion "27.0.2"
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "com.getbewarned.connectinterpreter"
         minSdkVersion 16
         targetSdkVersion 27
-        versionCode 17
-        versionName "2.1.1"
+        versionCode 21
+        versionName "2.3.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -25,27 +26,33 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:27.0.2'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-    compile 'com.google.code.gson:gson:2.8.2'
-    compile 'com.opentok.android:opentok-android-sdk:2.12.0'
-    compile 'pub.devrel:easypermissions:1.0.1'
-    compile 'com.jaredrummler:android-device-names:1.1.5'
+    implementation 'com.android.support:appcompat-v7:27.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.opentok.android:opentok-android-sdk:2.12.0'
+    implementation 'pub.devrel:easypermissions:1.0.1'
+    implementation 'com.jaredrummler:android-device-names:1.1.5'
     testCompile 'junit:junit:4.12'
-    compile 'com.facebook.android:facebook-core:[4,5)'
-    compile 'com.facebook.android:facebook-login:[4,5)'
-    compile 'com.facebook.android:facebook-share:[4,5)'
-    compile 'com.facebook.android:facebook-places:[4,5)'
-    compile 'com.facebook.android:facebook-messenger:[4,5)'
-    compile 'com.facebook.android:facebook-applinks:[4,5)'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.5.0'
-    compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    implementation 'com.facebook.android:facebook-core:4.31.0'
+    implementation 'com.facebook.android:facebook-login:4.31.0'
+    implementation 'com.facebook.android:facebook-share:4.31.0'
+    implementation 'com.facebook.android:facebook-places:4.31.0'
+    implementation 'com.facebook.android:facebook-messenger:4.31.0'
+    implementation 'com.facebook.android:facebook-applinks:4.31.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation files('libs/paylibliqpay.jar.jar')
-    compile 'com.google.firebase:firebase-messaging:11.8.0'
-    compile 'com.google.firebase:firebase-core:11.8.0'
-    compile 'com.google.firebase:firebase-config:11.8.0'
+    implementation 'com.google.firebase:firebase-messaging:11.4.2'
+    implementation 'com.google.firebase:firebase-core:11.4.2'
+    implementation 'com.google.firebase:firebase-config:11.4.2'
+    implementation 'io.realm:android-adapters:2.1.1'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.google.android.exoplayer:exoplayer:2.7.1'
+    implementation 'com.github.whalemare:sheetmenu:1.3.3'
+    implementation 'com.github.nisrulz:qreader:2.1.2'
+    implementation'com.github.nkzawa:socket.io-client:0.3.0'
 }
 
 
