--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.getbewarned.connectinterpreter">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <uses-permission android:name="android.permission.CAPTURE_VIDEO_OUTPUT" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
+        android:debuggable="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher"
@@ -21,8 +23,7 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.CallActivity"
-            android:configChanges="orientation|screenSize"
-            />
+            android:configChanges="orientation|screenSize" />
         <activity
             android:name=".ui.SplashActivity"
             android:screenOrientation="portrait"
@@ -60,12 +61,47 @@
         <activity
             android:name=".ui.UtogActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".ui.CountryActivity"
-            android:parentActivityName=".ui.LoginActivity">
+        <activity
+            android:name=".ui.CountryActivity"
+            android:parentActivityName=".ui.LoginActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.LoginActivity" />
         </activity>
+        <activity
+            android:name=".ui.RequestsActivity"
+            android:parentActivityName=".ui.MainActivity"
+            android:screenOrientation="portrait">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ui.MainActivity" />
+        </activity>
+        <activity
+            android:name=".ui.RequestActivity"
+            android:parentActivityName=".ui.RequestsActivity"
+            android:screenOrientation="portrait">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ui.RequestsActivity" />
+        </activity>
+        <activity
+            android:name=".ui.VideoPlayerActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".ui.ImagePreviewActivity" />
+
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
+        <activity android:name=".ui.QrScannerActivity" />
+        <activity android:name=".ui.GroupSessionActivity"></activity>
     </application>
 
 </manifest>
