--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,15 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.1.2'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         classpath 'com.google.gms:google-services:3.1.0'
+        classpath "io.realm:realm-gradle-plugin:5.0.0"
     }
 }
 
@@ -18,6 +20,8 @@ allprojects {
         jcenter()
         maven { url 'https://maven.google.com' }
         maven { url 'https://tokbox.bintray.com/maven' }
+        maven { url "https://jitpack.io" }
+        google()
     }
 }
 
