--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,9 +8,11 @@ android {
         applicationId "com.getbewarned.connectinterpreter"
         minSdkVersion 16
         targetSdkVersion 27
-        versionCode 22
-        versionName "2.3.1"
+        versionCode 31
+        versionName "2.5.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -24,13 +26,17 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:design:27.0.2'
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.android.support:support-vector-drawable:27.1.1'
+    implementation 'com.android.support:multidex:1.0.3'
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation 'com.android.support:appcompat-v7:27.0.2'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:preference-v7:27.1.1'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.google.code.gson:gson:2.8.2'
@@ -55,7 +61,8 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer:2.7.1'
     implementation 'com.github.whalemare:sheetmenu:1.3.3'
     implementation 'com.github.nisrulz:qreader:2.1.2'
-    implementation'com.github.nkzawa:socket.io-client:0.3.0'
+    implementation 'com.github.nkzawa:socket.io-client:0.3.0'
+    implementation 'com.android.support:gridlayout-v7:27.1.1'
 }
 
 
