--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.getbewarned.connectinterpreter">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -40,6 +39,9 @@
 
         <activity
             android:name=".ui.LoginActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.NameInputActivity"
             android:screenOrientation="portrait" />
         <activity android:name="ua.privatbank.paylibliqpay.CheckoutActivity" />
 
