--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -122,6 +122,9 @@
             android:name=".ui.NewsDetail"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".ui.ProfileActivityV2"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".ui.ProfileActivity"
             android:parentActivityName=".ui.NewMainActivity"
             android:screenOrientation="portrait"
