--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -131,6 +131,8 @@
             android:name=".ui.PurchaseActivity"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".ui.HelpActivity"  android:theme="@style/HelpActivity" />
+        <activity
             android:name=".ui.ProfileActivity"
             android:parentActivityName=".ui.NewMainActivity"
             android:screenOrientation="portrait"
