--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -131,8 +131,9 @@
             android:name=".ui.PurchaseActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ui.CompensationActivity"
-            android:screenOrientation="portrait" />
+            android:name=".ui.compensation.CompensationActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize"/>
         <activity
             android:name=".ui.HelpActivity"  android:theme="@style/HelpActivity" />
         <activity
