--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -148,6 +148,9 @@
             android:name=".ui.HelpActivity"
             android:theme="@style/HelpActivity" />
         <activity
+            android:name=".ui.requests.HelpRequestActivity"
+            android:theme="@style/HelpActivity" />
+        <activity
             android:name=".ui.ProfileActivity"
             android:parentActivityName=".ui.NewMainActivity"
             android:screenOrientation="portrait"
