--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     compileSdkVersion 27
     buildToolsVersion '27.0.3'
     defaultConfig {
-        applicationId "com.getbewarned.connectinterpreter"
+        applicationId "com.interpreter_android.ru"
         minSdkVersion 16
         targetSdkVersion 27
         versionCode 31
@@ -63,6 +63,7 @@ dependencies {
     implementation 'com.github.nisrulz:qreader:2.1.2'
     implementation 'com.github.nkzawa:socket.io-client:0.3.0'
     implementation 'com.android.support:gridlayout-v7:27.1.1'
+    implementation 'com.yandex.money:checkout:3.1.0'
 }
 
 
