--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -154,6 +154,9 @@
             android:name=".ui.ErrorActivity"
             android:theme="@style/Transparent_Activity" />
         <activity
+            android:name=".ui.WaitCallResponseActivity"
+            android:theme="@style/Transparent_Activity" />
+        <activity
             android:name=".ui.ProfileActivity"
             android:parentActivityName=".ui.NewMainActivity"
             android:screenOrientation="portrait"
