--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,12 +11,12 @@
 
     <application
         android:allowBackup="false"
-        tools:replace="android:allowBackup"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.NoActionBar">
+        android:theme="@style/AppTheme.NoActionBar"
+        tools:replace="android:allowBackup">
         <activity
             android:name=".ui.NewMainActivity"
             android:label=""
@@ -26,8 +26,8 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.CallActivity"
-            android:windowSoftInputMode="adjustPan"
-            android:configChanges="orientation|screenSize" />
+            android:configChanges="orientation|screenSize"
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".ui.SplashActivity"
             android:screenOrientation="portrait"
@@ -142,21 +142,6 @@
             android:name=".ui.compensation.CompensationActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
-        <activity
-            android:name=".ui.HelpActivity"
-            android:theme="@style/Transparent_Activity" />
-        <activity
-            android:name=".ui.requests.HelpRequestActivity"
-            android:theme="@style/Transparent_Activity" />
-        <activity
-            android:name=".ui.ErrorActivity"
-            android:theme="@style/Transparent_Activity" />
-        <activity
-            android:name=".ui.WaitCallResponseActivity"
-            android:theme="@style/Transparent_Activity" />
-        <activity
-            android:name=".ui.RateInterpreterActivity"
-            android:theme="@style/Transparent_Activity" />
         <activity
             android:name=".ui.ProfileActivity"
             android:parentActivityName=".ui.NewMainActivity"
