--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ buildscript {
         classpath 'com.google.gms:google-services:4.3.2'
 
         classpath "io.realm:realm-gradle-plugin:5.0.0"
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.4.1'
     }
 }
 
