--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ allprojects {
         maven { url 'https://maven.google.com' }
         maven { url 'https://tokbox.bintray.com/maven' }
         maven { url "https://jitpack.io" }
-        maven { url 'https://dl.bintray.com/yandex-money/maven' }
+        maven { url 'https://dl.bintray.com/yoomoney/maven' }
         google()
     }
 }
