--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,10 +15,25 @@ android {
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled true
     }
+
+    signingConfigs {
+
+        def props = new Properties()
+        file("properties/keystore.properties").withInputStream { props.load(it) }
+
+        release {
+            keyAlias props.getProperty("RELEASE_KEY_ALIAS")
+            keyPassword props.getProperty("RELEASE_KEY_PASSWORD")
+            storeFile file(props.getProperty("RELEASE_STORE_FILE"))
+            storePassword props.getProperty("RELEASE_STORE_PASSWORD")
+        }
+    }
+
     buildTypes {
         release {
-            minifyEnabled false
+            debuggable false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
     lintOptions {
@@ -66,22 +81,13 @@ dependencies {
     implementation 'com.github.nkzawa:socket.io-client:0.3.0'
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
     implementation 'com.daimajia.androidanimations:library:2.0@aar'
-//    implementation 'com.yandex.money:checkout:4.0.0'
     implementation 'ru.yoo.sdk.kassa.payments:yookassa-android-sdk:5.0.1'
 
     implementation platform('com.google.firebase:firebase-bom:26.1.0')
     implementation 'com.google.firebase:firebase-crashlytics'
     implementation 'com.google.firebase:firebase-analytics'
 
-//    implementation 'org.apache.directory.studio:org.apache.commons.io:2.4'
 }
-
-
-
-
-
-
-
 
 
 apply plugin: 'com.google.gms.google-services'
